Add train script, fix manual annotations

--- a/model_training/train.conf
+++ b/model_training/train.conf
@@ -1,13 +1,21 @@
 [general]
-data_dir=../data
+data_dir=../data/annotated
 
 [convert]
-txt_annotations=${general:data_dir}/annotated/TRAINING_HOHFELD.txt
+txt_annotations=${general:data_dir}/TRAINING_HOHFELD.txt
 dev_samples=10
-output_train=${general:data_dir}/annotated/train.tsv
-output_dev=${general:data_dir}/annotated/dev.tsv
-output_labels=${general:data_dir}/annotated/labels.txt
+output_train=${general:data_dir}/train.tsv
+output_dev=${general:data_dir}/dev.tsv
+output_labels=${general:data_dir}/labels.txt
 
 [rbert_training]
+data_dir=${general:data_dir}
 train_tsv=${convert:output_train}
 dev_tsv=${convert:output_dev}
+task=semeval
+model_dir=./model
+eval_dir=/home/revenkoa/local_data/models/relex
+train_file=train.tsv
+test_file=dev.tsv
+label_file=labels.txt
+model_name_or_path=bert-base-multilingual-uncased
