add proposed answers

--- a/model_training/train.conf
+++ b/model_training/train.conf
@@ -14,7 +14,7 @@ train_tsv=${convert:output_train}
 dev_tsv=${convert:output_dev}
 task=semeval
 model_dir=./model
-eval_dir=/home/revenkoa/local_data/models/relex
+eval_dir=${general:data_dir}
 train_file=train.tsv
 test_file=dev.tsv
 label_file=labels.txt
