Consolidate all training into one file, update README

--- a/model_training/train.conf
+++ b/model_training/train.conf
@@ -2,7 +2,7 @@
 data_dir=../data/annotated
 
 [convert]
-txt_annotations=${general:data_dir}/TRAINING_HOHFELD.txt
+txt_annotations=${general:data_dir}/training_all.txt
 dev_samples=10
 output_train=${general:data_dir}/train.tsv
 output_dev=${general:data_dir}/dev.tsv
